<?xml version="1.0" encoding="utf-8"?>
<tools:android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layoutDL"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context="com.teamvan.testingespresso.MainActivity">

<LinearLayout
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" />
</LinearLayout>

<android.support.design.widget.NavigationView
    android:id="@+id/navigation_viewNV"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:headerLayout="@layout/menu_header"
    app:itemTextColor="@color/black"
    app:menu="@menu/drawer_menu" />
...
